add start sin and change amplitude

--- a/STM32CubeIDE/.cproject
+++ b/STM32CubeIDE/.cproject
@@ -29,7 +29,7 @@
 							<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.converthex.1144042149" name="Convert to Intel Hex file (-O ihex)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.converthex" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 							<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.convertbinary.464069505" name="Convert to binary file (-O binary)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.convertbinary" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 							<option id="com.st.stm32cube.ide.mcu.debug.option.cpuclock.1551716605" name="Cpu clock frequence" superClass="com.st.stm32cube.ide.mcu.debug.option.cpuclock" useByScannerDiscovery="false" value="216" valueType="string"/>
-							<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.nanoprintffloat.1212266630" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.nanoprintffloat" value="true" valueType="boolean"/>
+							<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.nanoprintffloat.1212266630" name="Use float with printf from newlib-nano (-u _printf_float)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.option.nanoprintffloat" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.targetplatform.1036843703" isAbstract="false" osList="all" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.targetplatform"/>
 							<builder buildPath="${workspace_loc:/STM32F746G_DISCO}/Debug" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.builder.1036034513" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Gnu Make Builder" parallelBuildOn="true" parallelizationNumber="optimal" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.builder"/>
 							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.1898055232" name="MCU GCC Assembler" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler">
@@ -390,21 +390,6 @@
 		<project id="STM32F746G_DISCO.null.285015772" name="STM32F746G_DISCO"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
-	<storageModule moduleId="scannerConfiguration">
-		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.624734783;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.624734783.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.669181499;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.112317426">
-			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
-		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.922278489;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.922278489.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.1406367611;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.1320125580">
-			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
-		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.922278489;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.922278489.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.318317522;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1007215386">
-			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
-		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.624734783;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.624734783.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.1337981174;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.539436455">
-			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
-		</scannerConfigBuildInfo>
-	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 	<storageModule moduleId="refreshScope" versionNumber="2">
 		<configuration configurationName="Debug">
@@ -414,4 +399,20 @@
 			<resource resourceType="PROJECT" workspacePath="/STM32F746G_DISCO"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="scannerConfiguration">
+		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.922278489;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.922278489.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.318317522;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1007215386">
+			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.624734783;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.624734783.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.669181499;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.112317426">
+			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.624734783;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.624734783.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.1337981174;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.539436455">
+			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.922278489;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.922278489.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.1406367611;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.1320125580">
+			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
